GGST-19 #in-review #comment implemented the rest of DTOs for batch jobs